--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -5,12 +5,34 @@ header_jspf.anchor.logout     = Logout
 header_jspf.anchor.menu       = Menu
 header_jspf.anchor.settings   = Settings
 
-list_catalog_jsp.table.header.name = Name
-
-list_cards_jsp.button.make_an_order = Make an order
-list_cards_jsp.table.header.name    = Name
-list_cards_jsp.table.header.order   = Order
-list_cards_jsp.table.header.price   = Price
+res.BookCatalog = Book catalog
+res.Name = Name
+res.Year = Year
+res.Author = Author
+res.Publishing = Publishing
+res.Description = Description
+res.Order = Order
+res.Cards = Cards
+res.Catalog = Catalog
+res.SignOut = Sign Out
+res.Sort = Sort
+res.FindBy= Find by:
+res.ShowAll = Show all
+res.Orders = Orders
+res.CancelOrder = Cancel Order
+res.Cancel = Cancel
+res.State = State
+res.Processing = Processing
+res.Registration = Registration
+res.Return = Return
+res.Fine = Fine
+res.InLibrary = In library
+res.OnHands = On hands
+res.InRoom = In room
+res.InvNumber = Inv. number
+res.Admin = admin
+res.Librarian = librarian
+res.Reader = reader
 
 list_orders_jsp.table.header.bill = Bill
 list_orders_jsp.table.header.client = Client
