--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -5,12 +5,34 @@ header_jspf.anchor.logout     = \u0412\u044B\u0439\u0442\u0438
 header_jspf.anchor.menu       = \u041C\u0435\u043D\u044E
 header_jspf.anchor.settings   = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 
-list_catalog_jsp.table.header.name = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-
-list_cards_jsp.button.make_an_order = \u0421\u0434\u0435\u043B\u0430\u0442\u044C \u0437\u0430\u043A\u0430\u0437
-list_cards_jsp.table.header.name    = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-list_cards_jsp.table.header.order   = \u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C
-list_cards_jsp.table.header.price   = \u0426\u0435\u043D\u0430
+res.BookCatalog = \u041A\u0430\u0442\u0430\u043B\u043E\u0433 \u043A\u043D\u0438\u0433
+res.Name = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+res.Year = \u0413\u043E\u0434
+res.Author = \u0410\u0432\u0442\u043E\u0440
+res.Publishing = \u0418\u0437\u0434\u0430\u0442\u0435\u043B\u044C\u0441\u0442\u0432\u043E
+res.Description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+res.Order = \u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C
+res.Cards = \u0410\u0431\u043E\u043D\u0435\u043C\u0435\u043D\u0442
+res.Catalog = \u041A\u0430\u0442\u0430\u043B\u043E\u0433
+res.SignOut = \u0412\u044B\u0439\u0442\u0438
+res.Sort = \u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430
+res.FindBy= \u041D\u0430\u0439\u0442\u0438 \u043F\u043E:
+res.ShowAll = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0432\u0441\u0435
+res.Orders = \u0417\u0430\u043A\u0430\u0437\u044B
+res.CancelOrder = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C \u0437\u0430\u043A\u0430\u0437
+res.Cancel = \u041E\u0442\u043C\u0435\u043D\u0430
+res.State = \u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
+res.Processing = \u041E\u0431\u0440\u0430\u0431\u0430\u0442\u044B\u0432\u0430\u0435\u0442\u0441\u044F
+res.Registration = \u041E\u0444\u043E\u0440\u043C\u043B\u0435\u043D\u0438\u0435
+res.Return = \u0412\u043E\u0437\u0432\u0440\u0430\u0442
+res.Fine = \u0428\u0442\u0440\u0430\u0444
+res.InLibrary = \u0412 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0435
+res.OnHands = \u041D\u0430 \u0440\u0443\u043A\u0430\u0445
+res.InRoom = \u0412 \u0437\u0430\u043B\u0435
+res.InvNumber = \u0418\u043D\u0432. \u043D\u043E\u043C\u0435\u0440
+res.Admin = \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+res.Librarian = \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0430\u0440\u044C
+res.Reader = \u0447\u0438\u0442\u0430\u0442\u0435\u043B\u044C
 
 list_orders_jsp.table.header.bill = \u0421\u0447\u0435\u0442
 list_orders_jsp.table.header.client = \u041A\u043B\u0438\u0435\u043D\u0442
